[package]
name = "analysis"
version = "0.1.0"
edition = "2024"

[lib]
name = "analysis"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]

[workspace]
members = ["."]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cognitive_complexity = "warn"

[lints]
workspace = true

[dev-dependencies]
proptest = "1.10.0"
rstest = "0.26.1"
